[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "extra-streamlit-components>=0.1.81",
    "google-genai>=1.67.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.55.0",
    "streamlit-authenticator>=0.4.2",
]
