[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.45.0",
    "requests>=2.28.0",
    "anthropic>=0.84.0",
    "google-genai>=1.67.0",
    "langchain-anthropic>=1.3.5",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]
